samples/_failures_safe/1761434618_e64514_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0bbe44c8.c:153:25: error: expected declaration specifiers or ‘...’ at end of input
  153 | void parser_init(struct Parser *parser,
      |                         ^~~~~~
